--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^4.26.0",
     "@tanstack/react-query-devtools": "^4.26.0",
     "axios": "^1.3.4",
+    "framer-motion": "^10.2.4",
     "html-to-react": "^1.5.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
